# pthread-setaffinity

./: .gitignore  CMakeLists.txt  README.md  affinity_str.py  debug.txt
include/: cpuset.h
src/: cpuset.c  cpuset.cc  main.c  main.cc  pthread-setaffinity.c  pthread-setaffinity.cc
